manifests/hub-core-services/openmeter/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-billing
  labels:
    name: platform-billing
    topology.platform.io/role: hub
